# aeon-neuro

./: .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  doc_improvement.yml  feature_request.yml  other_issue.yml
.github/utilities/: pr_open_commenter.py  run_examples.sh
.github/workflows/: periodic_tests.yml  pr_examples.yml  pr_opened.yml  pr_precommit.yml  pr_pytest.yml  precommit_autoupdate.yml  release.yml  update_contributors.yml
aeon_neuro/: __init__.py
aeon_neuro/_wip/classification/: _nuttall_knn.py
aeon_neuro/_wip/distances/: _get_optimal_weights.py  _reimannian.py  _riemannian.py  _riemannian_matrix.py
aeon_neuro/_wip/distances/tests/: test_riemannian.py  test_riemannian_matrix.py
aeon_neuro/_wip/transformations/series/: _covariance.py  _nuttall_strand.py  _power_spectrum.py  _psd_welch.py
aeon_neuro/benchmarking/: benchmark.py  classification_experiment.py  experiments.py
aeon_neuro/classification/: __init__.py  _deepconvnet.py
aeon_neuro/classification/deep_learning/: __init__.py  _eegnet.py
aeon_neuro/classification/deep_learning/tests/: __init__.py  test_deepconvnet.py  test_eegnet.py
aeon_neuro/classification/distance_based/: __init__.py  _riemannian_knn.py
aeon_neuro/classification/distance_based/tests/: __init__.py  test_riemann.py
aeon_neuro/classification/feature_based/: __init__.py  _cspsvm.py
aeon_neuro/classification/feature_based/tests/: __init__.py  test_cspsvm.py
aeon_neuro/classification/tests/: __init__.py  test_deepconvnet.py  test_eegnet.py
aeon_neuro/data/: __init__.py  load_bids.py  summary_info.md
aeon_neuro/data/FingerMovements/: FingerMovements.txt
aeon_neuro/data/HandMovementDirection/: HandMovementDirection.txt  HandMovementDirection_TEST.ts
aeon_neuro/data/KDD_Examples/KDD_MTSC/: KDD_MTSC_TRAIN.ts
aeon_neuro/data/SelfRegulationSCP1/: SelfRegulationSCP1.txt
aeon_neuro/data/auxiliary/: FaceDetection.json
aeon_neuro/data/basic_classification_task/: README  participants.tsv
aeon_neuro/data_scripts/: BandpowerEnsemble.py  VIPA_handing.py  load_eyes_experiment.py  matchingpennies.py
aeon_neuro/datasets/: __init__.py  _data_loaders.py  _single_problem_loaders.py  classification_datasets.py
aeon_neuro/datasets/data/Blink/: Blink.txt
aeon_neuro/datasets/data/HandMovementDirection/: HandMovementDirectionDimension10_TEST.arff  HandMovementDirectionDimension10_TRAIN.arff  HandMovementDirectionDimension1_TEST.arff  HandMovementDirectionDimension1_TRAIN.arff  HandMovementDirectionDimension2_TEST.arff  HandMovementDirectionDimension2_TRAIN.arff  HandMovementDirectionDimension3_TEST.arff  HandMovementDirectionDimension4_TEST.arff  (+14 more)
aeon_neuro/datasets/tests/: __init__.py  test_data_loaders.py
aeon_neuro/distances/: __init__.py  _reimannian.py  _riemannian.py
aeon_neuro/distances/tests/: __init__.py  test_reimannian.py
aeon_neuro/examples/: __init__.py  data_processing_example.py  example_load_classification_problem_from_raw.py  example_raw_data_loading.py
aeon_neuro/networks/: __init__.py  _eegnet.py  base.py
aeon_neuro/networks/tests/: test_eegnet.py  test_network_base.py
aeon_neuro/testing/: __init__.py
aeon_neuro/testing/tests/: __init__.py  test_all_estimators.py  test_core_imports.py  test_softdeps.py
aeon_neuro/tests/: __init__.py  example_test.py
aeon_neuro/transformations/: __init__.py  _bandpower.py  _downsample.py  _epoching.py  _umaptransformer.py  bandpower.py  downsample.py  epoching.py
aeon_neuro/transformations/collection/: __init__.py
aeon_neuro/transformations/series/: __init__.py  _bandpower.py
aeon_neuro/transformations/tests/: __init__.py  test_bandpower.py  test_downsample.py  test_epoching.py
aeon_neuro/utils/: data_io.py  discovery.py  mne_conversion.py
aeon_neuro/utils/tests/: test_discovery.py
build_tools/: pr_labeler.py  pr_open_commenter.py
docs/: api_reference.md  changelog.md  conf.py  datasets.md  index.md  index.rst  installation.md  papers.md
docs/api_reference/: benchmarking.rst  data.rst  data_scripts.rst  examples.rst  networks.rst  transformations.rst  utils.rst
docs/changelogs/: v0.0.1.md  v0.0.2.md
examples/: channel_selection.ipynb  classification.ipynb  data_loading.ipynb  dummy_notebook.ipynb  reimannian.ipynb  transformers.ipynb
examples/_wip/distances/: riemannian_classification.ipynb  riemannian_matrix.ipynb
sktime-neuro/benchmarking/: experiments.py
sktime-neuro/data/: summary_info.md
sktime-neuro/data/Blink/: Blink.txt
sktime-neuro/data/EyesOpenShut/: EyesOpenShut_TEST.ts
sktime-neuro/data/FingerMovements/: FingerMovements.txt  FingerMovements_TEST.ts  FingerMovements_TRAIN.ts
sktime-neuro/data/HandMovementDirection/: HandMovementDirection.txt
sktime-neuro/data/SelfRegulationSCP2/: SelfRegulationSCP2.txt
sktime-neuro/utils/: data_io.py
sktime_neuro/: __init__.py
sktime_neuro/data/: summary_info.md
sktime_neuro/data/FingerMovements/: FingerMovements_TEST.ts  FingerMovements_TRAIN.ts
sktime_neuro/data/SelfRegulationSCP1/: SelfRegulationSCP1.txt
sktime_neuro/tests/: example_test.py
sktime_neuro/utils/: data_io.py
tsmlpy_neuro/benchmarking/: experiments.py
tsmlpy_neuro/data/EyesOpenShut/: EyesOpenShut_TRAIN.ts
tsmlpy_neuro/data/auxiliary/: Blink.json  FingerMovements.json  HandMovementDirection.json  MotorImagery.json
tsmlpy_neuro/transformations/: bandpower.py  downsample.py  epoching.py
(+95 files in other folders)
